--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         const url = document.getElementById("url-input").value;
 
         if (url) {
-          console.log(`Url aa gya bahi`);
+          console.log(`Url aa gya bhai`);
           fetch("/api/links", {
             method: "POST",
             headers: {
