--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
         <input type="text" placeholder="Enter the link here" id="url-input" />
         <button id="shorten-btn">Shorten URL</button>
       </div>
+      <br>
+      <br>
+      <div id="result"></div>
     </div>
     <script>
       document
@@ -32,7 +35,8 @@
             })
               .then((response) => response.json())
               .then((data) => {
-                console.log("Success:", data);
+                console.log(`http://localhost:3000/api/links/${data.shortUrl}`);
+                document.getElementById("result").innerHTML = `Your short link is <a href="http://localhost:3000/api/links/${data.shortUrl}">http://localhost:3000/api/links/${data.shortUrl}</a>`;
                 // Handle the response data here
               })
               .catch((error) => {
