--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>shorturl</title>
     <link rel="stylesheet" href="index.css" />
+  </head>
   <body>
     <h1>Short URL</h1>
     <div class="container">
@@ -13,32 +14,29 @@
         <input type="text" placeholder="Enter the link here" id="url-input" />
         <button id="shorten-btn">Shorten URL</button>
       </div>
-      <br>
-      <br>
+      <br />
+      <br />
       <div id="result"></div>
     </div>
     <script>
-      document.getElementById("shorten-btn").addEventListener("click", () => {
-        const url = document.getElementById("url-input").value;
+      document
+        .getElementById("shorten-btn")
+        .addEventListener("click", () => {
+          const url = document.getElementById("url-input").value;
 
-        if (url) {
-          console.log(`Url aa gya bhai`);
-          fetch("/api/links", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({ originalUrl: url }), // Send the URL in the request body
-          })
-            .then((response) => response.json())
-            .then((data) => {
-              console.log("Success:", data);
-              // Handle the response data here
+          if (url) {
+            console.log(Url aa gya bahi);
+            fetch("/api/links", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({ originalUrl: url }), // Send the URL in the request body
             })
               .then((response) => response.json())
               .then((data) => {
-                console.log(`http://localhost:3000/api/links/${data.shortUrl}`);
-                document.getElementById("result").innerHTML = `Your short link is <a href="http://localhost:3000/api/links/${data.shortUrl}">http://localhost:3000/api/links/${data.shortUrl}</a>`;
+                console.log(http://localhost:3000/api/links/${data.shortUrl});
+                document.getElementById("result").innerHTML = Your short link is <a href="http://localhost:3000/api/links/${data.shortUrl}">http://localhost:3000/api/links/${data.shortUrl}</a>;
                 // Handle the response data here
               })
               .catch((error) => {
@@ -49,6 +47,6 @@
           }
         });
     </script>
+     
   </body>
 </html>
-
